...
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="292dp" />

        <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="354dp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_vpn_key_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
...
